@@ -31,6 +31,7 @@ Enhancements
 
 Bug fixes
  * Re-introduced MAC Authentication and 802.1X support in Cisco 3560, 3750
+ * Fixed expire deadline automatic un-registration (#865)
  * Updated Admin Guide to reflect proper method calls for custom VLAN assignment
  * Fixed Nortel switches problems on some models / firmwares
  * Fixed installer errors (#1217)
